--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,14 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
-            android:name=".view.LoginActivity"
+            android:name=".view.MangaDetailActivity"
             android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".ui.login.LoginActivity"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_login" />-->
+        <activity
+            android:name=".view.LoginActivity"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".ui.login.LoginActivity" -->
+        <!-- android:exported="false" -->
+        <!-- android:label="@string/title_activity_login" /> -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
