--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
+
     alias(libs.plugins.androidApplication)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -39,6 +41,9 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.legacy.support.v4
     testImplementation libs.junit
+    implementation platform('com.google.firebase:firebase-bom:33.14.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation 'org.jsoup:jsoup:1.15.4'
